# fastapi-fundamentals

./: README.md  pyproject.toml
app/: main.py  models.py
app/routers/: books.py
