[project]
name = "fastapi-fundamentals-lab"
version = "0.1.0"
description = "Exercise 1: FASTAPI fundamentals lab"
authors = [
    {name = "y"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.packages]]
include = "app"